# greenference-node

./: .env  README.md  docker-compose.yml
images/diffusion/: Dockerfile  requirements.txt  server.py
infra/docker/: Dockerfile.pod  entrypoint.sh
services/node-agent/: pyproject.toml
services/node-agent/src/greenference_node_agent/: config.py  main.py  runtime_server.py
services/node-agent/src/greenference_node_agent/application/: services.py
services/node-agent/src/greenference_node_agent/domain/: attestation.py  gpu_allocator.py  gpu_docker.py  inference.py  model_backend.py  pod.py  ssh.py  telemetry.py  templates.py  vm.py  volume.py
services/node-agent/src/greenference_node_agent/infrastructure/: repository.py
services/node-agent/src/greenference_node_agent/transport/: routes.py
